fixed overflow

--- a/css/page3.css
+++ b/css/page3.css
@@ -35,7 +35,7 @@ li{
 }
 
 .img-container{
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -52,41 +52,43 @@ li{
 .image-wrapper {
     position: relative;
     width: 100%;
-    
+    height: auto;
 }
 
 .car {
     width: 100%;
-    transition: opacity 0.6s ease-in-out; 
+    height: auto;
+    transition: opacity 0.6s ease-in-out;
+    position: absolute; 
+    top: 0;
+    left: 0;
 }
 
-.image-lists{
-    position: static;
 
-}
 
-.car.default {
-    opacity: 1;
-    z-index: 1;
-}
-
-.car.hover {
-    position: absolute;
-    opacity: 0;
-    z-index: 0;
-}
-
-.image-wrapper:hover .car.default {
-    position: absolute;
-    opacity: 0;
-    z-index: 0;
-}
-
-.image-wrapper:hover .car.hover {
+.default {
     position: static;
     opacity: 1;
     z-index: 1;
 }
+
+.hover {
+    opacity: 0;
+    z-index: 0;
+}
+
+.image-wrapper:hover .default {
+    opacity: 0;
+    z-index: 0;
+}
+
+.image-wrapper:hover .hover {
+    opacity: 1;
+    z-index: 1;
+}
+
+
+
 
 
 
@@ -98,7 +100,6 @@ li{
         height: 100%;
         display: flex;
         flex-direction: column;
-        font-size: 14px;
     }
 
     li{
